# autoreport

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS.md  chapter1_complete_structure.json  instructions.txt  selbstbeurteilung_chapter1_template.json  start-autobericht.cmd  start-autobericht.ps1  sync-autobericht.ps1
.beads/: config.yaml  issues.jsonl
.tldr/: daemon.pid
AutoBericht/: README.md  index.html  start-autobericht.ps1
ProjectTemplate/: README.txt  Vorlage AutoBericht.pptx  Vorlage IST-Aufnahme-Bericht d.V01.docm
Project_Test/: library_user_de-CH.json
docs/: INDEX.md  STATUS.md  excel_alignment_notes.md  macro_flows.md  macro_integration.md  oracle-browser.md  project_export_scaffold.bas  unified_project_schema.md
fromWork/: 2023 Rapport de visite Master Bericht old - LIE PHI CRE PRE.docx  2025-07-10 AutoBericht v0 Berichtform report selectors.xlsm  2025-07-10 AutoBericht v0 Berichtform report selectors.xlsx  2025-10-02 OPUS 4.1 recommendations.docx  2025-10-02_ExportedVBA.txt  IST-Aufnahme-Bericht FO.251.d V01.docx  Selbstbeurteilung Integrierte Sichereheit d.V14.xlsx
macros/: BerichtForm.frm  BerichtForm.frx  CButton.cls  CPhotoTagButton.bas  CPhotoTagButton.cls  CRowUI.cls  (+17 more)
vision-critique/: .env.example  .gitignore  README.md  pyproject.toml
vision-critique/vision_critique/: __init__.py  capture.py  cli.py  config.py  models.py  scorer.py
vision-critique/vision_critique/checks/: __init__.py  contrast.py  sizing.py
vision-critique/vision_critique/providers/: __init__.py  anthropic.py  base.py  local.py  openai.py
(+377 files in other folders)
